# rtorrent

./: Cargo.toml  demo
src/: bencode_parser.rs  disk.rs  errors.rs  lib.rs  main.rs  messages.rs  peer.rs  peer_manager.rs  piece_manager.rs  storage.rs  torrent.rs  tracker.rs  ui.rs
src/utils/: mod.rs  peer.rs
tests/: test_bencode_parser.rs  test_handshake.rs  test_tracking_client.rs
