[package]
name = "rtorrent"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
rand = "0.9.2"
reqwest = { version = "0.12.22", features = ["brotli", "gzip", "deflate"] }
sha1 = "0.10.6"
tokio = { version = "1.47.1", features = ["full"] }
urlencoding = "2.1.3"

[[test]]
name = "test_handshake"
path = "tests/test_handshake.rs"
